2002-03-13  Bernhard Rosenkraenzer <bero@redhat.com>
	* configure.in, m4/regex.m4, m4/malloc.m4, m4/realloc.m4:
	  Don't set LIBOBJS directly, autoconf 2.53 doesn't like it
	* intl/*: Sync with gettext 0.11
	* po/*: Sync with translation project

2002-01-23  Bernhard Rosenkraenzer <bero@redhat.com>
	* configure.in: Version 2.5g
	* Makefile.cvs, grep.spec: Add packaging tools
	Merge djgpp changes from Andrew Cottrell <anddjgpp@ihug.coml.au>:
	* src/grep.c: Added conditional compilation for DJGPP
	* djgpp: remove directory as it is no longer required with DJGPP 2.03
                 (or 2.04 when released)
	* README.DOS: Moved djgpp/readme to readme.dos
	* PATCHES.AC, PATCHES.AM: delete files - redundant
	* configure.in, Makefile.am: remove djgpp directory from list

2002-01-22  Bernhard Rosenkraenzer <bero@redhat.com>
	* doc/grep.texi, doc/grep.1, NEWS: Document --label
	* po/ru.po: Sync with translation project
	* po/grep.pot: Sync with source

2002-01-18  Bernhard Rosenkraenzer <bero@redhat.com>
	* src/grep.c: Add --label, based on patch from Stepan Koltsov

2001-11-20  Bernhard Rosenkraenzer <bero@redhat.com>
	* autogen.sh: Don't hardcode aclocal dir

2001-11-19  Bernhard Rosenkraenzer <bero@redhat.com>
	* src/grep.c: Add --only-matching (-o) switch (see NEWS)
	* doc/grep.texi, doc/grep.1, NEWS: Document changes
	* configure.in, lib/Makefile.am: Don't use internal getopt if
          we're on a system that provides a working getopt function

2001-09-25  Bernhard Rosenkraenzer <bero@redhat.com>
	* configure.in: Detect pcre correctly even when it's in
	  non-standard locations, using pcre-config
	* src/grep.c: Add --color={always,never,tty} argument (like in ls)
	* src/grep.c: Turn off blinking in the default colorization
	* src/grep.c: Add --devices (-D) switch (analogous to --directories)
	* src/dfa.c: Fix an i18n bug: echo "A" | grep '[A-Z0-9]' wouldn't work
	  in non-C-Locales on systems using current versions of glibc.