@@ -5,14 +5,12 @@ LN = ln
 
 # We let configure figure out whether we need
 # regex.c, strtoul.c, strtoull.c, and strtoumax.c.
-bin_PROGRAMS = grep egrep fgrep
-base_sources = grep.c grep.h \
+bin_PROGRAMS = grep
+grep_SOURCES = grep.c grep.h \
                dfa.c dfa.h \
                kwset.c  kwset.h \
-               search.c getpagesize.h system.h
-egrep_SOURCES = $(base_sources) egrepmat.c
-fgrep_SOURCES = $(base_sources) fgrepmat.c
-grep_SOURCES  = $(base_sources) grepmat.c
+               search.c getpagesize.h system.h \
+               grepmat.c egrepmat.c fgrepmat.c
 
 LDADD = @INTLLIBS@ ../lib/libgreputils.a
 datadir = $(prefix)/@DATADIRNAME@
@@ -22,3 +20,7 @@ INCLUDES = -I../intl -I$(top_srcdir)/lib -DLOCALEDIR=\"$(localedir)\"
 EXTRA_DIST = \
              dosbuf.c \
              vms_fab.c vms_fab.h
+
+install-local:
+	@LINK@ @bindir@/grep @bindir@/egrep
+	@LINK@ @bindir@/grep @bindir@/fgrep
